# zagent

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  Makefile  README.md  history.txt  justfile  zagent-config.yaml
.agents/: bug_triage.md  code_inspector.agent.md  coordinator.agent.md  docs_writer.agent.md  planning.agent.md  rust_developer.agent.md  rust_review.agent.md  security_audit.md  test_generator.md  version_control_manager.agent.md
crates/zagent-backend/: Cargo.toml
crates/zagent-backend/migrations/: 001_session_schema_v3.down.surql
crates/zagent-backend/src/: api.rs  engine.rs  formatting.rs  fs.rs  lib.rs  mcp.rs  migrations.rs  platform.rs  runtime.rs  session_store.rs  session_store_json.rs  session_store_memory.rs  shell_stream.rs  tracing_setup.rs  whisper.rs
crates/zagent-backend/src/tools/: file_edit.rs  file_read.rs  file_write.rs  list_dir.rs  mcp.rs  mod.rs  shell_exec.rs  webfetch.rs  websearch.rs
crates/zagent-backend/tests/: embedded_engine.rs  vfs_tools.rs
crates/zagent-core/: Cargo.toml
crates/zagent-core/src/: config.rs  error.rs  fs.rs  lib.rs  time.rs
crates/zagent-core/src/agent/: conversation.rs  custom_agents.rs  mod.rs
crates/zagent-core/src/provider/: configured.rs  local.rs  mod.rs  openai.rs  openrouter.rs  types.rs
crates/zagent-core/src/session/: types.rs
crates/zagent-core/src/tools/: mod.rs
crates/zagent-dioxus/: Cargo.toml
crates/zagent-loop/: Cargo.toml
crates/zagent-loop/src/: agent.rs  fs.rs  lib.rs  session.rs  tools.rs
crates/zagent-loop/tests/: embedded_agent.rs
crates/zagent-native/: Cargo.toml
crates/zagent-native/migrations/: 001_session_schema_v3.surql  001_session_schema_v3.up.surql
crates/zagent-native/src/: main.rs  platform.rs  session_store.rs  session_store_json.rs  tracing_setup.rs
crates/zagent-native/src/tools/: file_edit.rs  file_read.rs  file_write.rs  list_dir.rs  mod.rs  shell_exec.rs  webfetch.rs  websearch.rs
crates/zagent-server/: Cargo.toml
crates/zagent-server/src/: auth.rs  main.rs
crates/zagent-tui/: Cargo.toml
crates/zagent-tui/src/: main.rs
crates/zagent-ui-shared/: Cargo.toml
crates/zagent-ui-shared/src/: lib.rs
crates/zagent-wasm/: Cargo.toml
crates/zagent-wasm/src/: bindings.rs  http.rs  lib.rs
crates/zagent-web/: Cargo.toml  index.html
crates/zagent-web-demo/: Cargo.toml  index.html
crates/zagent-web-demo/src/: lib.rs
crates/zagent-web-dev/: Cargo.toml
crates/zagent-web-dev/src/: main.rs
crates/zagent-web/src/: lib.rs
docs/: deployment.md
wit/: agent-tools.wit
