[package]
name = "zagent-core"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
regex = { workspace = true }
tracing = { workspace = true }
derive_more = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
futures-util = "0.3"

# Async trait support
async-trait = "0.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3"

[dev-dependencies]
tokio = { workspace = true }
