[package]
name = "zagent-loop"
version.workspace = true
edition.workspace = true

[dependencies]
zagent-core = { path = "../zagent-core" }

serde = { workspace = true }
serde_json = { workspace = true }
async-trait = "0.1"
tokio = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
