[package]
name = "zagent-web-demo"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
zagent-core = { path = "../zagent-core" }
zagent-wasm = { path = "../zagent-wasm" }

serde = { workspace = true }
serde_json = { workspace = true }
async-trait = "0.1"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
gloo-net = { version = "0.6", features = ["http"] }
web-sys = { version = "0.3", features = [
    "Document",
    "DomTokenList",
    "Element",
    "Event",
    "EventTarget",
    "HtmlButtonElement",
    "HtmlElement",
    "HtmlInputElement",
    "HtmlSelectElement",
    "HtmlTextAreaElement",
    "Node",
    "Window",
] }
console_error_panic_hook = "0.1"
