[package]
name = "zagent-web"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
zagent-ui-shared = { path = "../zagent-ui-shared" }

ratzilla = "0.3"
serde = { workspace = true }
serde_json = { workspace = true }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
gloo-net = { version = "0.6", features = ["http"] }
console_error_panic_hook = "0.1"
urlencoding = "2"
